--- a/HHAAU.html
+++ b/HHAAU.html
@@ -204,8 +204,6 @@
                         这是我们的一些活动记录。<br><br>
                         <a href="https://mp.weixin.qq.com/s/C5EvzQ0bYKTLmln3NKO7CA">活动 | 盛夏星夜之杭中天联十二时辰</a><br>
                         <a href="https://mp.weixin.qq.com/s/hdqP4Z4R6SyV1wrLMj46Hg">活动 | 在通湖-第十届全国天文论坛</a><br>
-                        <a href="https://mp.weixin.qq.com/s/Bjc2UUxytBscb3F0VUIvhw">有阴影的地方，就有光 —— 2018年杭中天联年度摄影展</a><br>
-                        <a href="https://mp.weixin.qq.com/s/3Y9vf-n1icU9X76g6r-f-Q">杭中天联2018年度总结</a><br>
                         <a href="https://mp.weixin.qq.com/s/Pa4kb2jTRDJWctvAxtKGCg">活动 | 杭中天联长三角星空大会之行</a><br>
                         <a href="https://mp.weixin.qq.com/s/DpeOTK6kUhtaJNRuaPx3HQ">活动 | 记杭中天联七校国庆天文观测</a><br>
                         <a href="https://mp.weixin.qq.com/s/AZwXhmW8NT_M2oXAfJQgUw">活动 | 第九届全国天文社团发展论坛杭州团队回忆录</a><br>
@@ -237,34 +235,97 @@
                 </div>
             </div>
             <div class="col-lg-10 col-lg-offset-2">
-                <p style="color: #fff;"><br></p>
-                <h4>Committee 理事会</h4>
+                <h4 style="color: #fff;">Committee 理事会</h4>
             </div>
-            <div class="col-lg-8 col-lg-offset-2">
-                <p>Tangtangfang Fang 方唐唐方<br></p>
-                <ul class="list-inline item-details">
+            <div class="col-lg-6">
+                <p style="color: #fff;">Tangtangfang Fang 方唐唐方<br></p>
+                <ul class="list-inline item-details" style="color: #fff;">
                     <li>President</li>
                     <li>理事长</li>
-                    <li>Associate President of The High School Attached to Zhejiang University </li>
+                    <li>Associate President, Astronomical Society of The High School Attached to Zhejiang University</li>
                     <li>浙附明远天文社副社长</li>
                 </ul>
             </div>
-            <div class="col-lg-6 col-lg-offset-2">
-                <p>Yuming Cao 曹雨铭<br></p>
-                <ul class="list-inline item-details">
+            <div class="col-lg-6"></div>
+            <div class="col-lg-6">
+                <p style="color: #fff;">Yuming Cao 曹雨铭<br></p>
+                <ul class="list-inline item-details" style="color: #fff;">
                     <li>Associate President</li>
                     <li>副理事长</li>
-                    <li>Associate President of Hangzhou No.14 High School Astronomy Association</li>
+                    <li>Associate President, Hangzhou No.14 High School Astronomy Association</li>
                     <li>杭十四中天文社副社长</li>
                 </ul>
             </div>
-            <div class="col-lg-6 col-lg-offset-2">
-                <p>Yuhao Zhu 朱昱浩<br></p>
-                <ul class="list-inline item-details">
+            <div class="col-lg-6">
+                <p style="color: #fff;">Yuhao Zhu 朱昱浩<br></p>
+                <ul class="list-inline item-details" style="color: #fff;">
                     <li>Associate President</li>
                     <li>副理事长</li>
-                    <li>Associate President of Hangzhou No.2 High School Astronomy Association</li>
-                    <li>杭二中天文社副社长</li>
+                    <li>President, Hangzhou No.2 High School Astronomy Association</li>
+                    <li>杭二时生天文社社长</li>
+                </ul>
+            </div>
+            <div class="col-lg-6">
+                <p style="color: #fff;">Wenjing Bao 包文静<br></p>
+                <ul class="list-inline item-details" style="color: #fff;">
+                    <li>Director</li>
+                    <li>理事</li>
+                    <li>Associate President, Hangzhou Xuejun High School Astronomy Association</li>
+                    <li>学军中学天文社副社长</li>
+                </ul>
+            </div>
+            <div class="col-lg-6">
+                <p style="color: #fff;">Wentao Chen 陈文韬<br></p>
+                <ul class="list-inline item-details" style="color: #fff;">
+                    <li>Director</li>
+                    <li>理事</li>
+                    <li>Associate President, Astronomical Society of The High School Attached to Zhejiang University</li>
+                    <li>浙附明远天文社副社长</li>
+                </ul>
+            </div>
+            <div class="col-lg-6">
+                <p style="color: #fff;">Lezhi Wang 王乐之<br></p>
+                <ul class="list-inline item-details" style="color: #fff;">
+                    <li>Director</li>
+                    <li>理事</li>
+                    <li>Associate President, Hangzhou Xuejun High School Astronomy Association</li>
+                    <li>学军中学天文社副社长</li>
+                </ul>
+            </div>
+            <div class="col-lg-6">
+                <p style="color: #fff;">Benteng Xu 徐奔腾<br></p>
+                <ul class="list-inline item-details" style="color: #fff;">
+                    <li>Director</li>
+                    <li>理事</li>
+                    <li>Associate President, Hangzhou High School Observatory</li>
+                    <li>杭高天文社副社长</li>
+                </ul>
+            </div>
+            <div class="col-lg-6">
+                <p style="color: #fff;">Chen Yang 杨晨<br></p>
+                <ul class="list-inline item-details" style="color: #fff;">
+                    <li>Director</li>
+                    <li>理事</li>
+                    <li>Associate President, Hangzhou No.2 High School Astronomy Association</li>
+                    <li>杭二时生天文社副社长</li>
+                </ul>
+            </div>
+            <div class="col-lg-6">
+                <p style="color: #fff;">Yixuan Zhang 张一玄<br></p>
+                <ul class="list-inline item-details" style="color: #fff;">
+                    <li>Director</li>
+                    <li>理事</li>
+                    <li>Associate President, Hangzhou Foreign Languages School Astronomy Association</li>
+                    <li>杭外天文社副社长</li>
+                </ul>
+            </div>
+            <div class="col-lg-6">
+                <p style="color: #fff;">Gengnan Zhang 章庚楠<br></p>
+                <ul class="list-inline item-details" style="color: #fff;">
+                    <li>Director</li>
+                    <li>理事</li>
+                    <li>President, Xiaoshan High School Astronomy Association</li>
+                    <li>萧中天文社社长</li>
                 </ul>
             </div>
         </div>
