--- a/HHAAU.html
+++ b/HHAAU.html
@@ -234,7 +234,7 @@
                     <hr class="star-third">
                 </div>
             </div>
-            <div class="col-lg-10 col-lg-offset-2">
+            <div class="col-lg-12">
                 <h4 style="color: #fff;">Committee 理事会</h4>
             </div>
             <div class="col-lg-6">
@@ -246,7 +246,7 @@
                     <li>浙附明远天文社副社长</li>
                 </ul>
             </div>
-            <div class="col-lg-6"></div>
+            <div class="col-lg-12"></div>
             <div class="col-lg-6">
                 <p style="color: #fff;">Yuming Cao 曹雨铭<br></p>
                 <ul class="list-inline item-details" style="color: #fff;">
@@ -265,6 +265,7 @@
                     <li>杭二时生天文社社长</li>
                 </ul>
             </div>
+            <div class="col-lg-12"></div>
             <div class="col-lg-6">
                 <p style="color: #fff;">Wenjing Bao 包文静<br></p>
                 <ul class="list-inline item-details" style="color: #fff;">
