--- a/HHAAU.html
+++ b/HHAAU.html
@@ -329,6 +329,20 @@
                     <li>萧中天文社社长</li>
                 </ul>
             </div>
+            <div class="col-lg-12">
+                <h4 style="color: #fff;">Honour Committee 名誉理事会</h4>
+                <ul class="list-inline item-details" style="color: #fff;">
+                    <li>Yi Chen 陈宜</li>
+                    <li>Liangchen Dong 董良辰</li>
+                    <li>Chen Fu 傅晨</li>
+                    <li>Chenyi Li李晨怡</li>
+                    <li>Jialai Wang 王佳来</li>
+                    <li>Jinyun Wang 王槿云</li>
+                    <li>Zhichen Wang 王智琛</li>
+                    <li>Ruolin Zhang 张若琳</li>
+                    <li>Yuning Zhu 朱语宁</li>
+                </ul>
+            </div>
         </div>
     </section>
     
