--- a/HHAAU.html
+++ b/HHAAU.html
@@ -4,12 +4,12 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <title>
-    Hangzhou High-school Astronomical Associations Union 杭州市高中天文联合会
+    Hangzhou High-school Astronomical Association Union 杭州市高中天文联合会
   </title>
   <meta name="viewport" content="width=device-width" />
   <link href="https://h14ztws.github.io/favicon-hhaau.ico" rel="icon" type="image/x-icon">
   <link href="https://h14ztws.github.io/favicon-hhaau.ico" rel="shortcut icon" type="image/x-icon">
-  <meta name="description" content="Welcome! We are Hangzhou High-school Astronomical Associations Union. Here is our home page!." />
+  <meta name="description" content="Welcome! We are Hangzhou High-school Astronomical Association Union. Here is our home page!." />
   <meta name="keywords" content="astronomy,student,high school,club,union" />
   
   <meta name="author" content="HHAAU" />
@@ -67,7 +67,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#page-top">Hangzhou High-school Astronomical Associations Union</a>
+                <a class="navbar-brand" href="#page-top">Hangzhou High-school Astronomical Association Union</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -104,7 +104,7 @@
                 <div class="col-lg-12">
                     <img class="img-responsive" src="https://h14ztws.github.io/pic/hhaau.png" alt="">
                     <div class="intro-text">
-                        <span class="skills">Hangzhou High-school Astronomical Associations Union</span>
+                        <span class="skills">Hangzhou High-school Astronomical Association Union</span>
                         <hr class="star-light">
                         <span class="skills">杭州高中天文联合会</span>
                     </div>
@@ -124,13 +124,20 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <p> Welcome! We are Hangzhou High-school Astronomical Associations Union(HHAAU).<br><br>
+                    <p> Welcome! We are Hangzhou High-school Astronomical Association Union(HHAAU).<br><br>
                         欢迎！我们是杭州高中天文联合会。<br><br>
-                        We were founded in 2014. We are a multi-school astronomy association union of high school students in Hangzhou.<br><br>
-                        我们正式成立于2014年，是一个属于高中生自己的多校天文社团联合会。<br><br>
+                        We were founded in 2014. We are an astronomical association union voluntarily formed by high school astronomy associations and other high school students who do not have the conditions to participate in astronomy associations in Hangzhou.<br><br>
+                        我们正式成立于2014年，是由杭州地区内中学天文社团以及其他没有条件参加天文社团的中学生自愿组成的天文社团交流团体。<br><br>
+                        We hope to promote the development of the high-school astronomical associations in Hangzhou. We will committed to further strengthen the links between the associations and jointly engaging in astronomy.<br><br>
+                        我们致力于促进杭州地区内中学天文社团自身传承与发展，进一步加强社团间的联系并联合进行天文活动。<br><br>
                         We hope to establish a more open communication platform from the perspective of high school students in order to achieve better results and progress together.<br><br>
-                        我们希望从高中生的角度去建立一个更开放的交流平台，以达到更好的效果，实现共同进步。<br><br>
+                        我们希望从高中生的角度去建立一个更开放的交流平台，实现共同进步。<br><br>
                     </p>
+                </div>
+                <div class="col-lg-8 col-lg-offset-2 text-center">
+                    <a href="files/HHAAU's Charter - Simplified Chinese.pdf" class="btn btn-lg btn-outline">
+                        <i class="fa fa-download"></i>HHAAU's Charter - Simplified Chinese 杭中天联章程
+                    </a>
                 </div>
                 <div class="col-lg-8 col-lg-offset-3">
                     <img class="img-responsive" src="https://h14ztws.github.io/pic/hhaau.jpg" alt="">
@@ -178,7 +185,7 @@
                 </div>
                 <div class="col-lg-12 text-center">
                     <p style="color: #fff;"><br>
-                        We welcome all the High-school Astronomical Associations join us.<br><br>
+                        We welcome all the High-school Astronomical Associations to join us.<br><br>
                         我们欢迎所有的高中天文社团加入我们。<br><br>
                     </p>
                 </div>
@@ -198,7 +205,7 @@
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
                     <p>
-                        We have organized many activities about astronomy, such as Astronomical lectures, open classes and observations.<br>
+                        We have organized many activities about astronomy, such as Astronomical lectures, open classes and observations.<br><br>
                         我们会开展许多天文活动，例如科普讲座、天文公开课、组织外出观测等。<br><br>
                         Here are some of our activity logs in Chinese.<br><br>
                         这是我们的一些活动记录。<br><br>
@@ -341,6 +348,7 @@
                     <li>Zhichen Wang 王智琛</li>
                     <li>Ruolin Zhang 张若琳</li>
                     <li>Yuning Zhu 朱语宁</li>
+                    <li>Yuning Zhu 朱语宁</li>
                 </ul>
             </div>
         </div>
@@ -391,7 +399,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        Copyright &copy; Hangzhou High-school Astronomical Associations Union 2020
+                        Copyright &copy; Hangzhou High-school Astronomical Association Union 2020
                     </div>
                 </div>
             </div>
