--- a/HHAAU.html
+++ b/HHAAU.html
@@ -134,8 +134,8 @@
                         我们希望从高中生的角度去建立一个更开放的交流平台，实现共同进步。<br><br>
                     </p>
                 </div>
-                <div class="col-lg-8 col-lg-offset-2 text-center" style="background: #80B3FF;">
-                    <a href="files/HHAAU's Charter - Simplified Chinese.pdf" class="btn btn-lg btn-outline">
+                <div class="col-lg-8 col-lg-offset-2 text-center">
+                    <a href="files/HHAAU's Charter - Simplified Chinese.pdf" class="btn btn-lg btn-outline" style="background: #80B3FF;">
                         <i class="fa fa-download"></i>HHAAU's Charter - Simplified Chinese 杭中天联章程
                     </a>
                 </div>
@@ -348,7 +348,7 @@
                     <li>Zhichen Wang 王智琛</li>
                     <li>Ruolin Zhang 张若琳</li>
                     <li>Yuning Zhu 朱语宁</li>
-                    <li>以上按姓名拼音排序</li>
+                    <li>（以上按姓名拼音排序）</li>
                 </ul>
             </div>
         </div>
