--- a/HHAAU.html
+++ b/HHAAU.html
@@ -131,13 +131,14 @@
                         We hope to promote the development of the high-school astronomical associations in Hangzhou. We will committed to further strengthen the links between the associations and jointly engaging in astronomy.<br><br>
                         我们致力于促进杭州地区内中学天文社团自身传承与发展，进一步加强社团间的联系并联合进行天文活动。<br><br>
                         We hope to establish a more open communication platform from the perspective of high school students in order to achieve better results and progress together.<br><br>
-                        我们希望从高中生的角度去建立一个更开放的交流平台，实现共同进步。<br><br>
+                        我们希望从高中生的角度去建立一个更开放的交流平台，实现共同进步。<br>
                     </p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <a href="files/HHAAU's Charter - Simplified Chinese.pdf" class="btn btn-lg btn-outline" style="background: #80B3FF;">
-                        <i class="fa fa-download"></i>HHAAU's Charter - Simplified Chinese 杭中天联章程
+                    <a href="files/HHAAU's Charter - Simplified Chinese.pdf" class="btn btn-lg btn-outline" style="background: #233140;">
+                        <i class="fa fa-download"></i> HHAAU's Charter - Simplified Chinese 杭中天联章程
                     </a>
+                    <p><br></p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-3">
                     <img class="img-responsive" src="https://h14ztws.github.io/pic/hhaau.jpg" alt="">
