Update and rename HHAAU.html to hhaau.html

--- a/hhaau.html
+++ b/hhaau.html
@@ -260,8 +260,8 @@
                 <ul class="list-inline item-details" style="color: #fff;">
                     <li>Associate President</li>
                     <li>副理事长</li>
-                    <li>Associate President, Hangzhou No.14 High School Astronomy Association</li>
-                    <li>杭十四中天文社副社长</li>
+                    <li>Associate President, <a href="https://h14ztws.github.io/">Hangzhou No.14 High School Astronomy Association</a></li>
+                    <li><a href="https://h14ztws.github.io/">杭十四中天文社</a>副社长</li>
                 </ul>
             </div>
             <div class="col-lg-6">
