--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
                 <div class="col-lg-8 col-lg-offset-2">
                     <p> Here is Zhejiang Province Hangzhou No.14 High School Astronomy Association.<br><br>
                         我们是浙江省杭州第十四中学天文社。<br><br>
-                        We were founded in 2014. We are a member of Hangzhou Astronomical Society(HZAS) and the founding unit of <a href="https://h14ztws.github.io/HHAAU.html">Hangzhou High-school Astronomical Association Union(HHAAU)</a>.<br><br>
-                        我们正式成立于2014年，是杭州市天文学会的会员单位，也是<a href="https://h14ztws.github.io/HHAAU.html">杭州高中天文联合会</a>的创始单位。<br><br>
+                        We were founded in 2014. We are a member of Hangzhou Astronomical Society(HZAS) and the founding unit of <a href="https://h14ztws.github.io/hhaau.html">Hangzhou High-school Astronomical Association Union(HHAAU)</a>.<br><br>
+                        我们正式成立于2014年，是杭州市天文学会的会员单位，也是<a href="https://h14ztws.github.io/hhaau.html">杭州高中天文联合会</a>的创始单位。<br><br>
                         We are committed to astronomy and astrophotography, and we have organized many activities about astronomy. We are the Top Ten Outstanding Societies for Primary and Middle School Students in Hangzhou, and the most valuable society in our school.<br><br>
                         我们致力于天文科普和天文摄影，组织策划了许多天文活动，荣获杭州市中小学生十大精品社团、校优秀社团等称号。<br><br>
                         We have achieved good results in astronomy Olympiad. We have entered the Final of China National Astronomy Olympiad(CNAO) for times.Many of us won the first prize of Zhejiang Province Astronomy Olympiad. <br><br>
