--- a/hhaau.html
+++ b/hhaau.html
@@ -251,7 +251,7 @@
                     <li>President</li>
                     <li>理事长</li>
                     <li>Associate President, Astronomical Society of The High School Attached to Zhejiang University</li>
-                    <li>浙附明远天文社副社长</li>
+                    <li>浙大附中明远天文社副社长</li>
                 </ul>
             </div>
             <div class="col-lg-12"></div>
@@ -270,7 +270,7 @@
                     <li>Associate President</li>
                     <li>副理事长</li>
                     <li>President, Hangzhou No.2 High School Astronomy Association</li>
-                    <li>杭二时生天文社社长</li>
+                    <li>杭二中时生天文社社长</li>
                 </ul>
             </div>
             <div class="col-lg-12"></div>
@@ -289,7 +289,7 @@
                     <li>Director</li>
                     <li>理事</li>
                     <li>Associate President, Astronomical Society of The High School Attached to Zhejiang University</li>
-                    <li>浙附明远天文社副社长</li>
+                    <li>浙大附中明远天文社副社长</li>
                 </ul>
             </div>
             <div class="col-lg-4">
@@ -316,7 +316,7 @@
                     <li>Director</li>
                     <li>理事</li>
                     <li>Associate President, Hangzhou No.2 High School Astronomy Association</li>
-                    <li>杭二时生天文社副社长</li>
+                    <li>杭二中时生天文社副社长</li>
                 </ul>
             </div>
             <div class="col-lg-4">
