--- a/hhaau.html
+++ b/hhaau.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <title>
-    Hangzhou High-school Astronomical Association Union 杭州市高中天文联合会
+     杭州市高中天文联合会 Hangzhou High-school Astronomical Association Union
   </title>
   <meta name="viewport" content="width=device-width" />
   <link href="https://h14ztws.github.io/favicon-hhaau.ico" rel="icon" type="image/x-icon">
@@ -186,8 +186,8 @@
                 </div>
                 <div class="col-lg-12 text-center">
                     <p style="color: #fff;"><br>
-                        We welcome all the High-school Astronomical Associations to join us.<br><br>
-                        我们欢迎所有的高中天文社团加入我们。<br><br>
+                        We welcome all the High-school Astronomical Associations in Hangzhou to join us.<br><br>
+                        我们欢迎所有杭州地区的高中天文社团加入我们。<br><br>
                     </p>
                 </div>
             </div>
