--- a/hhaau.html
+++ b/hhaau.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <title>
-     杭州市高中天文联合会 Hangzhou High-school Astronomical Association Union
+     杭州高中天文联合会 Hangzhou High-school Astronomical Association Union
   </title>
   <meta name="viewport" content="width=device-width" />
   <link href="https://h14ztws.github.io/favicon-hhaau.ico" rel="icon" type="image/x-icon">
