--- a/hhaau.html
+++ b/hhaau.html
@@ -136,7 +136,7 @@
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <a href="files/HHAAU's Charter - Simplified Chinese.pdf" class="btn btn-lg btn-outline" style="background: #233140;">
-                        <i class="fa fa-download"></i> HHAAU's Charter - Simplified Chinese 杭中天联章程
+                        <i class="fa fa-download"></i> HHAAU's Charter 杭中天联章程
                     </a>
                     <p><br></p>
                 </div>
