--- a/members.html
+++ b/members.html
@@ -161,7 +161,7 @@
                     <li>Member of Hangzhou Astronomical Society(HZAS)</li>
                     <li>杭州天文学会成员</li>
                     <li>Honour Director of <a href="https://h14ztws.github.io/hhaau.html">Hangzhou High-school Astronomical Association Union(HHAAU)</a></li>
-                    <li><a href="https://h14ztws.github.io/hhaau.html">杭州高中天文联合会</a>名誉理事</li>
+                    <li><a href="https://h14ztws.github.io/hhaau.html">杭州高中天文社联合会</a>名誉理事</li>
                 </ul>
             </div>
             <div class="col-lg-12 text-center">
@@ -188,7 +188,7 @@
                     <li>Associate President of Hangzhou No.14 High School Astronomy Association</li>
                     <li>杭十四中天文社副社长</li>
                     <li>Associate President of <a href="https://h14ztws.github.io/hhaau.html">Hangzhou High-school Astronomical Association Union(HHAAU)</a></li>
-                    <li><a href="https://h14ztws.github.io/hhaau.html">杭州高中天文联合会</a>副理事长</li>
+                    <li><a href="https://h14ztws.github.io/hhaau.html">杭州高中天文社联合会</a>副理事长</li>
                     <li>the First Prize of Zhejiang Province Astronomy Olympiad, 2019</li>
                     <li>2019年，浙江省天文奥赛高中组一等奖</li>
                     <li>the Third Prize of Zhejiang Province Astronomy Olympiad, 2018</li>
