--- a/hhaau.html
+++ b/hhaau.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <title>
-     杭州高中天文联合会 Hangzhou High-school Astronomical Association Union
+     杭州高中天文社联合会 Hangzhou High-school Astronomical Association Union
   </title>
   <meta name="viewport" content="width=device-width" />
   <link href="https://h14ztws.github.io/favicon-hhaau.ico" rel="icon" type="image/x-icon">
@@ -106,7 +106,7 @@
                     <div class="intro-text">
                         <span class="skills">Hangzhou High-school Astronomical Association Union</span>
                         <hr class="star-light">
-                        <span class="skills">杭州高中天文联合会</span>
+                        <span class="skills">杭州高中天文社联合会</span>
                     </div>
                 </div>
             </div>
@@ -125,7 +125,7 @@
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
                     <p> Welcome! We are Hangzhou High-school Astronomical Association Union(HHAAU).<br><br>
-                        欢迎！我们是杭州高中天文联合会。<br><br>
+                        欢迎！我们是杭州高中天文社联合会。<br><br>
                         We were founded in 2014. We are an astronomical association union voluntarily formed by high school astronomy associations and other high school students who do not have the conditions to participate in astronomy associations in Hangzhou.<br><br>
                         我们正式成立于2014年，是由杭州地区内中学天文社团以及其他没有条件参加天文社团的中学生自愿组成的天文社团交流团体。<br><br>
                         We hope to promote the development of the high-school astronomical associations in Hangzhou. We will committed to further strengthen the links between the associations and jointly engaging in astronomy.<br><br>
