--- a/observatory.html
+++ b/observatory.html
@@ -167,7 +167,7 @@
             </div>
             <div class="col-lg-8 col-lg-offset-2">
                 <p><br>Fengqi Observatory now fixedly equips the Celetron C14 (which is the largest Schmidt-Cassegrain telescope in Hangzhou) and Paramount MX. <br><br>
-                   凤起天文台现在使用杭州市最大的施卡望远镜——星特朗C14望远镜，和它的赤道仪——派拉蒙MX。<br><br>
+                   凤起天文台现在使用的是杭州市口径最大的施卡望远镜之一——星特朗C14望远镜，和它的赤道仪——派拉蒙MX。<br><br>
                    There are different cameras, including QHY 9SM, QHY 8PRO, ZWO ASI174MM, etc., which can support multiple tasks for teaching, observation and astrophotography.<br><br>
                    这里有不同种类的相机，包括QHY 9SM，QHY 8PRO，ZWO ASI174MM等，它们可以支持教学，观察和天文摄影的多个任务。<br><br>
                    We are now undergoing network transformation and will be able to provide remote observatory services later.<br><br>
