--- a/index.html
+++ b/index.html
@@ -232,6 +232,20 @@
         </div>
     </section>
     
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 text-center">
+                <p>Links 友情链接 </p>
+                <p><a href="https://astronomy.nju.edu.cn/">School of Astronomy and Space Science, NJU 南京大学天文与空间科学学院</a> </p>
+                <p><a href="https://astro.ustc.edu.cn/">Department of Astronomy, USTC 中国科学技术大学天文系</a> </p>
+                <p><a href="http://astro.ucas.ac.cn/">School of Astronomy and Space Science, UCAS 中国科学院大学天文与空间科学学院</a> </p>
+                <p><a href="http://vega.bac.pku.edu.cn/">Department of Astronomy, PKU 北京大学天文学系</a> </p>  
+                <p><a href="http://astro.sjtu.edu.cn/">Department of Astronomy, SJTU 上海交通大学天文系</a> </p>
+                <p><a href="http://astrowww.bnu.edu.cn/">Astronomy Department, BNU 北京师范大学天文系</a> </p>
+            </div>
+        </div>
+    </div>
+    
     <!-- Footer -->
     <footer class="text-center">
         <div class="footer-above">
