--- a/index.html
+++ b/index.html
@@ -235,6 +235,10 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
+                <select name="Links 友情链接">
+                    <option value="南京大学天文与空间科学学院"><a href="https://astronomy.nju.edu.cn/">School of Astronomy and Space Science, NJU 南京大学天文与空间科学学院</a></option>
+                    <option value="北京大学天文学系"><a href="http://vega.bac.pku.edu.cn/">Department of Astronomy, PKU 北京大学天文学系</a></option>
+                </select>
                 <p>Links 友情链接 </p>
                 <p><a href="https://astronomy.nju.edu.cn/">School of Astronomy and Space Science, NJU 南京大学天文与空间科学学院</a> </p>
                 <p><a href="https://astro.ustc.edu.cn/">Department of Astronomy, USTC 中国科学技术大学天文系</a> </p>
