--- a/index.html
+++ b/index.html
@@ -243,6 +243,9 @@
                     <option value="http://vega.bac.pku.edu.cn/">Department of Astronomy, PKU 北京大学天文学系</option>
                     <option value="http://astro.sjtu.edu.cn/">Department of Astronomy, SJTU 上海交通大学天文系</option>
                     <option value="http://astrowww.bnu.edu.cn/">Astronomy Department, BNU 北京师范大学天文系</option>
+                    <option value="http://www.bao.ac.cn/">National Astronomical Observatories, CAS(NAOC) 中国科学院国家天文台</option>
+                    <option value="http://www.pmo.ac.cn/">Purple Mountain Observatory, CAS(PMO) 中国科学院紫金山天文台</option>
+                    <option value="http://www.pmo.ac.cn/">Shanghai Astronomical Observatory, CAS(SHAO) 中国科学院上海天文台</option>
                 </select>
             </div>
         </div>
