--- a/index.html
+++ b/index.html
@@ -234,10 +234,10 @@
     
     <div class="container">
         <div class="row">
-            <div class="col-lg-12">
-                <p>Links 友情链接</p>
+            <div class="col-lg-6">
+                <p>Links 常用链接</p>
                 <select onchange="javascript:if (this.options[this.selectedIndex].value != '') window.open(this.options[this.selectedIndex].value);this.options[0].selected;">
-                    <option value="">Links 友情链接</option>
+                    <option value="">Most Used Links 常用链接</option>
                     <option value="https://astronomy.nju.edu.cn/">School of Astronomy and Space Science, NJU 南京大学天文与空间科学学院</option>
                     <option value="https://astro.ustc.edu.cn/">Department of Astronomy, USTC 中国科学技术大学天文系</option>
                     <option value="http://astro.ucas.ac.cn/">School of Astronomy and Space Science, UCAS 中国科学院大学天文与空间科学学院</option>
@@ -247,6 +247,9 @@
                     <option value="http://www.bao.ac.cn/">National Astronomical Observatories, CAS(NAOC) 中国科学院国家天文台</option>
                     <option value="http://www.pmo.ac.cn/">Purple Mountain Observatory, CAS(PMO) 中国科学院紫金山天文台</option>
                     <option value="http://www.shao.ac.cn/">Shanghai Astronomical Observatory, CAS(SHAO) 中国科学院上海天文台</option>
+                    <option value="http://physics.zju.edu.cn/">Department of Physics, ZJU 浙江大学物理学系</option>
+                    <option value="https://www.h14z.cn/">Hangzhou No.14 High School 浙江省杭州第十四中学</option>
+                    <option value="https://h14ztws.github.io/hhaau.html">Hangzhou High-school Astronomical Association Union(HHAAU) 杭州高中天文社联合会</option>
                 </select>
                 <p><br></p>
             </div>
