--- a/index.html
+++ b/index.html
@@ -187,13 +187,15 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p> We have a practical base with good environment, located in Jiangnantianchi, Tianhuangping, Anji, Huzhou, Zhejiang, China.<br><br>
-                        During the holidays, we will organize some observation activities to the Jiangnantianchi Observatory.
+                    <p>Hangzhou No.14 High School Astronomical Observational Base of Shanghai Astronomical Observatory, CAS is located in Jiangnantianchi, Tianhuangping, Anji, Huzhou, Zhejiang, China.<br><br>
+                       The Base is about 1 kilometer above sea level and with good environment.<br><br>
+                       During the holidays, we will organize some observation activities to the base at Jiangnantianchi Observatory.
                     </p>
                 </div>
                 <div class="col-lg-4">
-                    <p>我们拥有一个环境不错的活动实践基地，位于浙江省湖州市安吉县天荒坪镇的江南天池风景区。<br><br>
-                       假期我们会组织一些上山活动，前往<a href="http://www.jntianchi.com/tianwentai/">江南天池天文台</a>进行观测。                       
+                    <p>中国科学院上海天文台杭州第十四中学天文观测基地位于浙江省湖州市安吉县天荒坪镇的江南天池风景区。<br><br>
+                       观测基地海拔约1千米，并且具有比较良好的观测环境。<br><br>
+                       假期我们会组织一些上山活动，前往<a href="http://www.jntianchi.com/tianwentai/">江南天池天文台</a>基地进行观测。                       
                     </p>
                 </div>
             </div>
