--- a/index.html
+++ b/index.html
@@ -128,6 +128,8 @@
                         我们是浙江省杭州第十四中学天文社。<br><br>
                         We were founded in 2014. We are the founding unit of <a href="https://h14ztws.github.io/hhaau.html">Hangzhou High-school Astronomical Association Union(HHAAU)</a>, and strongly affiliated with Hangzhou Astronomical Society(HZAS).<br><br>
                         我们正式成立于2014年，是<a href="https://h14ztws.github.io/hhaau.html">杭州高中天文社联合会</a>的创始单位，同时与杭州市天文学会拥有紧密的联系。<br><br>
+                        We have an <a href="https://h14ztws.github.io/observatory.html">astronomical observatory</a> in our school, and an astronomical observational base of Shanghai Astronomical Observatory, CAS.<br><br>
+                        我们在校园内拥有一个<a href="https://h14ztws.github.io/observatory.html">天文台</a>，并且拥有一个依托于中国科学院上海天文台的观测基地。<br><br>
                         We are committed to astronomy and astrophotography, and we have organized many activities about astronomy. We are the Top Ten Outstanding Societies for Primary and Middle School Students in Hangzhou, and the most valuable society in our school.<br><br>
                         我们致力于天文科普和天文摄影，组织策划了许多天文活动，荣获杭州市中小学生十大精品社团、校优秀社团等称号。<br><br>
                         We have achieved good results in astronomy Olympiad. We have entered the Final of China National Astronomy Olympiad(CNAO) for times.Many of us won the first prize of Zhejiang Province Astronomy Olympiad. <br><br>
@@ -157,13 +159,13 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p style="color: #fff;">Hangzhou No.14 High School is located by the beautiful West Lake, at the foot of Baoshi Mountain. Our observatory is located on campus, at the top of the 2nd teaching building.<br>
+                    <p style="color: #fff;">Hangzhou No.14 High School is located by the beautiful West Lake, at the foot of Baoshi Mountain. Our observatory named Fengqi is located on campus, at the top of the 2nd teaching building.<br>
                                             There are many astronomical equipments here, the most notable of which is the Celetron C14 and Paramount MX.<br>
                                             Limited by the light pollution in Hangzhou, we now use them for teaching, observation and astrophotography.
                     </p>
                     </div>
                 <div class="col-lg-4">
-                    <p style="color: #fff;">杭十四中坐落在美丽的西湖旁，宝石山脚下。我们的天文台就位于校园内，在第二教学楼的顶端。<br><br>
+                    <p style="color: #fff;">杭十四中坐落在美丽的西湖旁，宝石山脚下。我们的凤起天文台就位于校园内，在第二教学楼的顶端。<br><br>
                                             这里拥有许多的天文仪器设备，其中最引人注目的当属杭州市最大的施卡望远镜之一——星特朗C14望远镜，和它的赤道仪——派拉蒙MX。<br><br>
                                             受限于杭州的光污染，我们现在将它用于教学、天文观测和天文摄影等。<br><br>
                         >>><a href="https://h14ztws.github.io/observatory.html">View More details</a>
@@ -181,7 +183,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h3>Base 实践基地</h3>
+                    <h3>Base 观测基地</h3>
                     <hr class="star-primary">
                 </div>
             </div>
@@ -194,8 +196,8 @@
                 </div>
                 <div class="col-lg-4">
                     <p>中国科学院上海天文台杭州第十四中学天文观测基地位于浙江省湖州市安吉县天荒坪镇的江南天池风景区。<br><br>
-                       观测基地海拔约1千米，并且具有比较良好的观测环境。<br><br>
-                       假期我们会组织一些上山活动，前往<a href="http://www.jntianchi.com/tianwentai/">江南天池天文台</a>基地进行观测。                       
+                       观测基地地理经度=119.59° E，纬度=30.46° N，海拔高度=958m，位于天目山的余脉，并且具有比较良好的观测环境。<br><br>
+                       假期我们会组织一些上山活动，前往位于<a href="http://www.jntianchi.com/tianwentai/">江南天池天文台</a>的观测基地进行观测。                       
                     </p>
                 </div>
             </div>
