--- a/index.html
+++ b/index.html
@@ -126,13 +126,13 @@
                 <div class="col-lg-8 col-lg-offset-2">
                     <p> Here is Zhejiang Province Hangzhou No.14 High School Astronomy Association.<br><br>
                         我们是浙江省杭州第十四中学天文社。<br><br>
-                        We were founded in 2014. We are the founding unit of <a href="https://h14ztws.github.io/hhaau.html">Hangzhou High-school Astronomical Association Union(HHAAU)</a>, and strongly affiliated with Hangzhou Astronomical Society(HZAS).<br><br>
+                        We were founded in 2014. We are the founding unit of <a href="https://h14ztws.github.io/hhaau.html">Hangzhou High-school Astronomical Association Union (HHAAU)</a>, and strongly affiliated with Hangzhou Astronomical Society (HZAS).<br><br>
                         我们正式成立于2014年，是<a href="https://h14ztws.github.io/hhaau.html">杭州高中天文社联合会</a>的创始单位，同时与杭州市天文学会拥有紧密的联系。<br><br>
-                        We have an <a href="https://h14ztws.github.io/observatory.html">astronomical observatory</a> in our school, and an astronomical observational base of Shanghai Astronomical Observatory, CAS.<br><br>
-                        我们在校园内拥有一个<a href="https://h14ztws.github.io/observatory.html">天文台</a>，并且拥有一个依托于中国科学院上海天文台的观测基地。<br><br>
+                        We have an <a href="https://h14ztws.github.io/observatory.html">astronomical observatory</a> in our school, and an astronomical observational base of <a href="http://english.shao.cas.cn/">Shanghai Astronomical Observatory, CAS (SHAO)</a>.<br><br>
+                        我们在校园内拥有一个<a href="https://h14ztws.github.io/observatory.html">天文台</a>，并且拥有一个依托于<a href="http://www.shao.cas.cn/">中国科学院上海天文台</a>的观测基地。<br><br>
                         We are committed to astronomy and astrophotography, and we have organized many activities about astronomy. We are the Top Ten Outstanding Societies for Primary and Middle School Students in Hangzhou, and the most valuable society in our school.<br><br>
                         我们致力于天文科普和天文摄影，组织策划了许多天文活动，荣获杭州市中小学生十大精品社团、校优秀社团等称号。<br><br>
-                        We have achieved good results in astronomy Olympiad. We have entered the Final of China National Astronomy Olympiad(CNAO) for times.Many of us won the first prize of Zhejiang Province Astronomy Olympiad. <br><br>
+                        We have achieved good results in astronomy Olympiad. We have entered the Final of China National Astronomy Olympiad (CNAO) for times.Many of us won the first prize of Zhejiang Province Astronomy Olympiad. <br><br>
                         我们也在天文奥赛中取得了不错的成绩，多次闯入全国中学生天文奥赛决赛，多人荣获浙江省天文奥赛一等奖。<br><br>
                         Our members have been accepted by outstanding universities around the world, including Tsinghua University, UC Berkeley, Imperial College London, etc.<br><br>
                         我们的成员被海内外的优秀大学录取，包括清华大学、加州大学伯克利分校、帝国理工学院等。
@@ -159,13 +159,13 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p style="color: #fff;">Hangzhou No.14 High School is located by the beautiful West Lake, at the foot of Baoshi Mountain. Our observatory named Fengqi is located on campus, at the top of the 2nd teaching building.<br>
+                    <p style="color: #fff;"><a href="http://www.h14z.cn/category/id1755144009448654642.htm">Hangzhou No.14 High School</a> is located by the beautiful West Lake, at the foot of Baoshi Mountain. <a href="https://h14ztws.github.io/observatory.html">Our observatory</a> named Fengqi is located on campus, at the top of the 2nd teaching building.<br>
                                             There are many astronomical equipments here, the most notable of which is the Celetron C14 and Paramount MX.<br>
                                             Limited by the light pollution in Hangzhou, we now use them for teaching, observation and astrophotography.
                     </p>
                     </div>
                 <div class="col-lg-4">
-                    <p style="color: #fff;">杭十四中坐落在美丽的西湖旁，宝石山脚下。我们的凤起天文台就位于校园内，在第二教学楼的顶端。<br><br>
+                    <p style="color: #fff;"><a href="http://www.h14z.cn/">杭十四中</a>坐落在美丽的西湖旁，宝石山脚下。我们的<a href="https://h14ztws.github.io/observatory.html">凤起天文台</a>就位于校园内，在第二教学楼的顶端。<br><br>
                                             这里拥有许多的天文仪器设备，其中最引人注目的当属杭州市最大的施卡望远镜之一——星特朗C14望远镜，和它的赤道仪——派拉蒙MX。<br><br>
                                             受限于杭州的光污染，我们现在将它用于教学、天文观测和天文摄影等。<br><br>
                         >>><a href="https://h14ztws.github.io/observatory.html">View More details</a>
@@ -243,9 +243,9 @@
                 <select onchange="javascript:if (this.options[this.selectedIndex].value != '') window.open(this.options[this.selectedIndex].value);this.options[0].selected;">
                     <option value="">Links 常用链接</option>
                     <option value="https://www.iau.org/">International Astronomical Union (IAU) 国际天文学联合会</option>
-                    <option value="http://www.bao.ac.cn/">National Astronomical Observatories, CAS (NAOC) 中国科学院国家天文台</option>
-                    <option value="http://www.pmo.ac.cn/">Purple Mountain Observatory, CAS (PMO) 中国科学院紫金山天文台</option>
-                    <option value="http://www.shao.ac.cn/">Shanghai Astronomical Observatory, CAS (SHAO) 中国科学院上海天文台</option>
+                    <option value="http://www.bao.cas.cn/">National Astronomical Observatories, CAS (NAOC) 中国科学院国家天文台</option>
+                    <option value="http://www.pmo.cas.cn/">Purple Mountain Observatory, CAS (PMO) 中国科学院紫金山天文台</option>
+                    <option value="http://www.shao.cas.cn/">Shanghai Astronomical Observatory, CAS (SHAO) 中国科学院上海天文台</option>
                     <option value="">-------------------------</option>
                     <option value="https://astronomy.nju.edu.cn/">School of Astronomy and Space Science, NJU 南京大学天文与空间科学学院</option>
                     <option value="https://astro.ustc.edu.cn/">Department of Astronomy, USTC 中国科学技术大学天文系</option>
