--- a/index.html
+++ b/index.html
@@ -132,10 +132,10 @@
                         我们在校园内拥有一个<a href="https://h14ztws.github.io/observatory.html">天文台</a>，并且拥有一个依托于<a href="http://www.shao.cas.cn/">中国科学院上海天文台</a>的观测基地。<br><br>
                         We are committed to astronomy and astrophotography, and we have organized many activities about astronomy. We are the Top Ten Outstanding Societies for Primary and Middle School Students in Hangzhou, and the most valuable society in our school.<br><br>
                         我们致力于天文科普和天文摄影，组织策划了许多天文活动，荣获杭州市中小学生十大精品社团、校优秀社团等称号。<br><br>
-                        We have achieved good results in astronomy Olympiad. We have entered the Final of China National Astronomy Olympiad (CNAO) for times.Many of us won the first prize of Zhejiang Province Astronomy Olympiad. <br><br>
+                        We have achieved good results in astronomy Olympiad. We have entered the Final of China National Astronomy Olympiad (CNAO) for times. Many of us won the first prize of Zhejiang Province Astronomy Olympiad.<br><br>
                         我们也在天文奥赛中取得了不错的成绩，多次闯入全国中学生天文奥赛决赛，多人荣获浙江省天文奥赛一等奖。<br><br>
-                        Our members have been accepted by outstanding universities around the world, including Tsinghua University, UC Berkeley, Imperial College London, etc.<br><br>
-                        我们的成员被海内外的优秀大学录取，包括清华大学、加州大学伯克利分校、帝国理工学院等。
+                        Our members have been accepted by outstanding universities around the world, including <a href="https://www.tsinghua.edu.cn/en/">Tsinghua University</a>, <a href="https://www.berkeley.edu/">UC Berkeley</a>, <a href="https://www.imperial.ac.uk/">Imperial College London</a>, etc.<br><br>
+                        我们的成员被海内外的优秀大学录取，包括<a href="https://www.tsinghua.edu.cn/">清华大学</a>、<a href="https://www.berkeley.edu/">加州大学伯克利分校</a>、<a href="https://www.imperial.ac.uk/">帝国理工学院</a>等。
                     </p>
                 </div>
                 <div class="col-lg-3 col-lg-offset-8">
@@ -150,7 +150,7 @@
 
     <!-- Observatory Section -->
     <section id="observatory">
-        <div class="container" style="background: #80B3FF;">
+        <div class="container" style="background: #2971E8;">
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h3 style="color: #fff;">Observatory 天文台</h3>
