--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                     </p>
                 </div>
                 <div class="col-lg-3 col-lg-offset-8">
-                    <p>>>><a href="https://h14ztws.github.io/members.html">View Our Members</a></p>
+                    <p>>>><a href="https://h14ztws.github.io/members.html">View Our Members 更多详情</a></p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-3">
                     <img class="img-responsive" src="/pic/hy.jpg" alt="">
@@ -150,7 +150,7 @@
 
     <!-- Observatory Section -->
     <section id="observatory">
-        <div class="container" style="background: #2971E8;">
+        <div class="container" style="background: #4A80DA;">
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h3 style="color: #fff;">Observatory 天文台</h3>
@@ -168,7 +168,7 @@
                     <p style="color: #fff;"><a href="http://www.h14z.cn/">杭十四中</a>坐落在美丽的西湖旁，宝石山脚下。我们的<a href="https://h14ztws.github.io/observatory.html">凤起天文台</a>就位于校园内，在第二教学楼的顶端。<br><br>
                                             这里拥有许多的天文仪器设备，其中最引人注目的当属杭州市最大的施卡望远镜之一——星特朗C14望远镜，和它的赤道仪——派拉蒙MX。<br><br>
                                             受限于杭州的光污染，我们现在将它用于教学、天文观测和天文摄影等。<br><br>
-                        >>><a href="https://h14ztws.github.io/observatory.html">View More details</a>
+                        >>><a href="https://h14ztws.github.io/observatory.html">View More details 更多详情</a>
                     </p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-3">
