--- a/index.html
+++ b/index.html
@@ -138,8 +138,8 @@
                         我们的成员被海内外的优秀大学录取，包括<a href="https://www.tsinghua.edu.cn/">清华大学</a>、<a href="https://www.berkeley.edu/">加州大学伯克利分校</a>、<a href="https://www.imperial.ac.uk/">帝国理工学院</a>等。
                     </p>
                 </div>
-                <div class="col-lg-3 col-lg-offset-8">
-                    <p>>>><a href="https://h14ztws.github.io/members.html">View Our Members 更多详情</a></p>
+                <div class="col-lg-4 col-lg-offset-6">
+                    <p>>>><a href="https://h14ztws.github.io/members.html">View Our Members 我们的成员</a></p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-3">
                     <img class="img-responsive" src="/pic/hy.jpg" alt="">
