--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
     </section>
     
     <div class="container">
-        <div class="row">
+        <!div class="row">
             <div class="col-lg-4">
                 <p>Links 常用链接</p>
                 <select onchange='if (this.value!="") {window.open(this.value)}'>
@@ -259,7 +259,7 @@
                 </select>
                 <p><br></p>
             </div>
-        </div>
+        <!/div>
     </div>
     
     <!-- Footer -->
