--- a/index.html
+++ b/index.html
@@ -237,8 +237,8 @@
     </section>
     
     <div class="container">
-        <!div class="row">
-            <div class="col-lg-4">
+        <div class="row">
+            <div class="col-lg-2">
                 <p>Links 常用链接</p>
                 <select onchange='if (this.value!="") {window.open(this.value)}'>
                     <option selected disabled style="display: none;" value="" >Links 常用链接</option>
@@ -259,7 +259,7 @@
                 </select>
                 <p><br></p>
             </div>
-        <!/div>
+        </div>
     </div>
     
     <!-- Footer -->
