--- a/members.html
+++ b/members.html
@@ -140,7 +140,7 @@
             <div class="col-lg-6">
                 <p>Haibin Wu 吴海斌<br></p>
                 <ul class="list-inline item-details">
-                    <li>the Outstanding Counselor Award of Zhejiang Province Astronomy Olympiad, 2019</li>
+                    <li>The Outstanding Counselor Award of Zhejiang Province Astronomy Olympiad, 2019</li>
                     <li>2019年，浙江省天文奥赛优秀指导教师奖</li>
                     <li>M.Sc. in Geography, <a href="http://www.fjnu.edu.cn/english/">Fujian Normal University</a>, 2017</li>
                     <li>2017年，<a href="http://www.fjnu.edu.cn/">福建师范大学</a>地理科学学院，理学硕士</li>
@@ -158,9 +158,9 @@
                 <ul class="list-inline item-details">
                     <li>Senior astronomy amateur</li>
                     <li>资深天文爱好者</li>
-                    <li>Member of Hangzhou Astronomical Society(HZAS)</li>
-                    <li>杭州天文学会成员</li>
-                    <li>Honour Director of <a href="https://h14ztws.github.io/hhaau.html">Hangzhou High-school Astronomical Association Union(HHAAU)</a></li>
+                    <li>Member of Hangzhou Astronomical Society (HZAS)</li>
+                    <li>杭州天文学会筹备组成员</li>
+                    <li>Honour Director of <a href="https://h14ztws.github.io/hhaau.html">Hangzhou High-school Astronomical Association Union (HHAAU)</a></li>
                     <li><a href="https://h14ztws.github.io/hhaau.html">杭州高中天文社联合会</a>名誉理事</li>
                 </ul>
             </div>
@@ -169,10 +169,10 @@
                 <h4>Student Committee 理事会</h4>
             </div>
             <div class="col-lg-2 col-lg-offset-2">
-                <img class="img-responsive" src="https://h14ztws.github.io/pic/wy.jpg" alt="">
+                <img class="img-responsive" src="https://h14ztws.github.io/pic/unknown.png" alt="">
             </div>
             <div class="col-lg-6">
-                <p>Yun Wang 王芸<br></p>
+                <p>Ruiyang Qiu 仇瑞扬<br></p>
                 <ul class="list-inline item-details">
                     <li>President of Hangzhou No.14 High School Astronomy Association</li>
                     <li>杭十四中天文社社长</li>
@@ -180,27 +180,10 @@
             </div>
             <div class="col-lg-12"></div>
             <div class="col-lg-2 col-lg-offset-2">
-                <img class="img-responsive" src="https://h14ztws.github.io/pic/cym.jpg" alt="">
+                <img class="img-responsive" src="https://h14ztws.github.io/pic/unknown.png" alt="">
             </div>
             <div class="col-lg-6">
-                <p>Yuming Cao 曹雨铭<br></p>
-                <ul class="list-inline item-details">
-                    <li>Associate President of Hangzhou No.14 High School Astronomy Association</li>
-                    <li>杭十四中天文社副社长</li>
-                    <li>Associate President of <a href="https://h14ztws.github.io/hhaau.html">Hangzhou High-school Astronomical Association Union(HHAAU)</a></li>
-                    <li><a href="https://h14ztws.github.io/hhaau.html">杭州高中天文社联合会</a>副理事长</li>
-                    <li>the First Prize of Zhejiang Province Astronomy Olympiad, 2019</li>
-                    <li>2019年，浙江省天文奥赛高中组一等奖</li>
-                    <li>the Third Prize of Zhejiang Province Astronomy Olympiad, 2018</li>
-                    <li>2018年，浙江省天文奥赛高中组三等奖</li>
-                </ul>
-            </div>
-            <div class="col-lg-12"></div>
-            <div class="col-lg-2 col-lg-offset-2">
-                <img class="img-responsive" src="https://h14ztws.github.io/pic/dy.jpg" alt="">
-            </div>
-            <div class="col-lg-6">
-                <p>Alexandra Dong 董垚<br></p>
+                <p>Zihan Hu 胡子涵<br></p>
                 <ul class="list-inline item-details">
                     <li>Associate President of Hangzhou No.14 High School Astronomy Association</li>
                     <li>杭十四中天文社副社长</li>
@@ -208,26 +191,43 @@
             </div>
             <div class="col-lg-12"></div>
             <div class="col-lg-2 col-lg-offset-2">
-                <img class="img-responsive" src="https://h14ztws.github.io/pic/cyc.jpg" alt="">
+                <img class="img-responsive" src="https://h14ztws.github.io/pic/lzy.jpg" alt="">
             </div>
             <div class="col-lg-6">
-                <p>Yiceng Cheng 程忆曾<br></p>
+                <p>Zhuoyue Li 李卓樾<br></p>
                 <ul class="list-inline item-details">
                     <li>Associate President of Hangzhou No.14 High School Astronomy Association</li>
                     <li>杭十四中天文社副社长</li>
+                    <li>The Third Prize of Zhejiang Province Astronomy Olympiad, 2019</li>
+                    <li>2019年，浙江省天文奥赛高中组三等奖</li>
                 </ul>
             </div>
             <div class="col-lg-12"></div>
             <div class="col-lg-2 col-lg-offset-2">
-                <img class="img-responsive" src="https://h14ztws.github.io/pic/shy.jpg" alt="">
+                <img class="img-responsive" src="https://h14ztws.github.io/pic/syh.jpg" alt="">
             </div>
             <div class="col-lg-6">
-                <p>Haoyang Shao 邵昊洋<br></p>
+                <p>Yuhao Sun 孙瑜浩<br></p>
                 <ul class="list-inline item-details">
-                    <li>Director of Hangzhou No.14 High School Astronomy Association</li>
-                    <li>杭十四中天文社理事</li>
-                    <li>the First Prize of Zhejiang Province Astronomy Olympiad, 2019</li>
-                    <li>2019年，浙江省天文奥赛高中组一等奖</li>
+                    <li>Associate President of Hangzhou No.14 High School Astronomy Association</li>
+                    <li>杭十四中天文社副社长</li>
+                    <li>The Third Prize of Zhejiang Province Astronomy Olympiad, 2019</li>
+                    <li>2019年，浙江省天文奥赛高中组三等奖</li>
+                </ul>
+            </div>
+            <div class="col-lg-12"></div>
+            <div class="col-lg-2 col-lg-offset-2">
+                <img class="img-responsive" src="https://h14ztws.github.io/pic/wcw.jpg" alt="">
+            </div>
+            <div class="col-lg-6">
+                <p>Changwei Wu 吴昌蔚<br></p>
+                <ul class="list-inline item-details">
+                    <li>Associate President of Hangzhou No.14 High School Astronomy Association</li>
+                    <li>杭十四中天文社副社长</li>
+                    <li>President of <a href="https://h14ztws.github.io/hhaau.html">Hangzhou High-school Astronomical Association Union (HHAAU)</a></li>
+                    <li><a href="https://h14ztws.github.io/hhaau.html">杭州高中天文社联合会</a>理事长</li>
+                    <li>The Third Prize of Zhejiang Province Astronomy Olympiad, 2019</li>
+                    <li>2019年，浙江省天文奥赛高中组三等奖</li>
                 </ul>
             </div>
             <div class="col-lg-12 text-center">
@@ -266,7 +266,16 @@
                     <li></li>
                 </ul>
             </div>
-            
+            <div class="col-lg-4">
+                <ul class="list-inline item-details">
+                    <li>Yun Wang 王芸</li>
+                    <li>Yuming Cao 曹雨铭</li>
+                    <li>Alexandra Dong 董垚</li>
+                    <li>Yiceng Cheng 程忆曾</li>
+                    <li>Haoyang Shao 邵昊洋</li>
+                    <li></li>
+                </ul>
+            </div>
         </div>
         <div class="row">
             <div class="col-lg-12 text-center">
