--- a/index.html
+++ b/index.html
@@ -132,10 +132,10 @@
                         我们在校园内拥有一个<a href="https://h14ztws.github.io/observatory.html">天文台</a>，并且拥有一个依托于<a href="http://www.shao.cas.cn/">中国科学院上海天文台</a>的观测基地。<br><br>
                         We are committed to astronomy and astrophotography, and we have organized many activities about astronomy. We are the Top Ten Outstanding Societies for Primary and Middle School Students in Hangzhou, and the most valuable society in our school.<br><br>
                         我们致力于天文科普和天文摄影，组织策划了许多天文活动，荣获杭州市中小学生十大精品社团、校优秀社团等称号。<br><br>
-                        We have achieved good results in astronomy Olympiad. We have entered the Final of China National Astronomy Olympiad (CNAO) for times. Many of us won the first prize of Zhejiang Province Astronomy Olympiad.<br><br>
+                        We have achieved good results in Astronomy Olympiad. We have entered the Final of China National Astronomy Olympiad (CNAO) for times. Many of us won the first prize of Zhejiang Province Astronomy Olympiad.<br><br>
                         我们也在天文奥赛中取得了不错的成绩，多次闯入全国中学生天文奥赛决赛，多人荣获浙江省天文奥赛一等奖。<br><br>
-                        Our members have been accepted by outstanding universities around the world, including <a href="https://www.tsinghua.edu.cn/en/">Tsinghua University</a>, <a href="https://www.berkeley.edu/">UC Berkeley</a>, <a href="https://www.imperial.ac.uk/">Imperial College London</a>, etc.<br><br>
-                        我们的成员被海内外的优秀大学录取，包括<a href="https://www.tsinghua.edu.cn/">清华大学</a>、<a href="https://www.berkeley.edu/">加州大学伯克利分校</a>、<a href="https://www.imperial.ac.uk/">帝国理工学院</a>等。
+                        Our members have been accepted by outstanding universities around the world, including <a href="https://www.tsinghua.edu.cn/en/">Tsinghua University</a>, <a href="http://www.zju.edu.cn/english/">Zhejiang University</a>, <a href="https://www.berkeley.edu/">UC Berkeley</a>, <a href="https://www.imperial.ac.uk/">Imperial College London</a>, etc.<br><br>
+                        我们的成员被海内外的优秀大学录取，包括<a href="https://www.tsinghua.edu.cn/">清华大学</a>、<a href="http://www.zju.edu.cn/">浙江大学</a>、<a href="https://www.berkeley.edu/">加州大学伯克利分校</a>、<a href="https://www.imperial.ac.uk/">帝国理工学院</a>等。
                     </p>
                 </div>
                 <div class="col-lg-4 col-lg-offset-6">
@@ -253,7 +253,7 @@
                     <option value="http://astro.ucas.ac.cn/">School of Astronomy and Space Science, UCAS 中国科学院大学天文与空间科学学院</option>
                     <option value="http://vega.bac.pku.edu.cn/">Department of Astronomy, PKU 北京大学天文学系</option>
                     <option value="http://astro.sjtu.edu.cn/">Department of Astronomy, SJTU 上海交通大学天文系</option>
-                    <option value="http://astrowww.bnu.edu.cn/">Department of Astronomy, BNU 北京师范大学天文系</option>
+                    <option value="https://astro.bnu.edu.cn/">Department of Astronomy, BNU 北京师范大学天文系</option>
                     <option value="http://physics.zju.edu.cn/">Department of Physics, ZJU 浙江大学物理学系</option>
                     <option value="http://www.h14z.cn/">Hangzhou No.14 High School 浙江省杭州第十四中学</option>
                     <option value="https://h14ztws.github.io/hhaau.html">Hangzhou High-school Astronomical Association Union (HHAAU) 杭州高中天文社联合会</option>
