--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                     <a href="http://astro.ucas.ac.cn/">School of Astronomy and Space Science, UCAS 中国科学院大学天文与空间科学学院</a><br>
                     <a href="http://vega.bac.pku.edu.cn/">Department of Astronomy, PKU 北京大学天文学系</a><br>
                     <a href="http://astro.sjtu.edu.cn/">Department of Astronomy, SJTU 上海交通大学天文系</a><br>
-                    <a href="http://astrowww.bnu.edu.cn/">Department of Astronomy, BNU 北京师范大学天文系</a><br>
+                    <a href="https://astro.bnu.edu.cn/">Department of Astronomy, BNU 北京师范大学天文系</a><br>
                 </p>
             </div>
             <div class="col-lg-4">
@@ -294,6 +294,7 @@
                 <p><font size="-1">
                     <a href="http://physics.zju.edu.cn/">Department of Physics, ZJU 浙江大学物理学系</a><br>
                     <!--<a href="http://www.astro-zjut.com/">The Institute of Astrophysics, ZJUT 浙江工业大学天体物理研究所</a><br>-->
+                    <!--<a href="http://www.lxy.zjut.edu.cn/redir.php?catalog_id=895&object_id=74713">The Institute of Astrophysics, ZJUT 浙江工业大学天体物理研究所</a><br>-->
                     <a href="http://www.wsc.zjut.edu.cn/zjuteng/jsp/news.jsp?neId=3233">The Institute of Astrophysics, ZJUT 浙江工业大学天体物理研究所</a><br>
                     <a href="http://www.h14z.cn/">Hangzhou No.14 High School 浙江省杭州第十四中学</a><br>
                     <a href="https://h14ztws.github.io/hhaau.html">Hangzhou High-school Astronomical Association Union (HHAAU) 杭州高中天文社联合会</a><br>
