--- a/members.html
+++ b/members.html
@@ -187,6 +187,8 @@
                 <ul class="list-inline item-details">
                     <li>Associate President of Hangzhou No.14 High School Astronomy Association</li>
                     <li>杭十四中天文社副社长</li>
+                    <li>The Third Prize of Zhejiang Province Astronomy Olympiad, 2020</li>
+                    <li>2020年，浙江省天文奥赛高中组三等奖</li>
                 </ul>
             </div>
             <div class="col-lg-12"></div>
@@ -211,6 +213,8 @@
                 <ul class="list-inline item-details">
                     <li>Associate President of Hangzhou No.14 High School Astronomy Association</li>
                     <li>杭十四中天文社副社长</li>
+                    <li>The Second Prize of Zhejiang Province Astronomy Olympiad, 2020</li>
+                    <li>2020年，浙江省天文奥赛高中组二等奖</li>
                     <li>The Third Prize of Zhejiang Province Astronomy Olympiad, 2019</li>
                     <li>2019年，浙江省天文奥赛高中组三等奖</li>
                 </ul>
@@ -226,6 +230,8 @@
                     <li>杭十四中天文社副社长</li>
                     <li>President of <a href="https://h14ztws.github.io/hhaau.html">Hangzhou High-school Astronomical Association Union (HHAAU)</a></li>
                     <li><a href="https://h14ztws.github.io/hhaau.html">杭州高中天文社联合会</a>理事长</li>
+                    <li>The Second Prize of Zhejiang Province Astronomy Olympiad, 2020</li>
+                    <li>2020年，浙江省天文奥赛高中组二等奖</li>
                     <li>The Third Prize of Zhejiang Province Astronomy Olympiad, 2019</li>
                     <li>2019年，浙江省天文奥赛高中组三等奖</li>
                 </ul>
